--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     def room_version = "2.4.3"
     def firebase_version = "31.1.0"
     def coroutines_version = "1.6.4"
-    def maps_version = "4.2.2-full"
+    def maps_version = "4.2.2-lite"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "androidx.core:core-ktx:$core_version"
